# opencode-mobile

./: .gitignore  BRIDGE-ARCHITECTURE-SPEC.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/issues/: telegram-duplicate-edit-crash.md  telegram-sse-parser-mismatch.md
scripts/: e2e_simulated_telegram_prompt.py  e2e_test.py
src/opencode_telegram/: __init__.py  __main__.py  _logging_context.py  bot.py  bridge_db.py  buttons.py  client.py  commands.py  config.py  format.py  handlers.py  logging_config.py  models.py  native_commands.py  opencode_client.py  permission_handler.py  poller.py  session_state.py  startup.py
tests/: test_allowlist.py  test_bot_commands.py  test_bot_startup.py  test_bridge_db.py  test_client_cache.py  test_commands.py  test_config.py  test_main.py  test_native_commands.py  test_permission_handler.py  test_prompt_request.py  test_session_state.py
